--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "watch": "npx gulp"
   },
   "dependencies": {
+    "@types/chrome": "^0.0.277",
+    "@types/events": "^3.0.3",
+    "@types/node": "^22.7.5",
     "clsx": "^2.1.1",
+    "events": "^3.3.0",
     "react": "^18.3.1",
     "react-aria-components": "^1.4.0",
     "react-dom": "^18.3.1",
