--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "watch": "npx gulp"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
     "@types/chrome": "^0.0.277",
     "@types/events": "^3.0.3",
     "@types/node": "^22.7.5",
+    "@types/three": "^0.169.0",
     "clsx": "^2.1.1",
     "events": "^3.3.0",
     "react": "^18.3.1",
     "react-aria-components": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "three": "^0.169.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
