--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "@types/chrome": "^0.0.277",
     "@types/events": "^3.0.3",
     "@types/node": "^22.7.5",
