--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "three": "^0.169.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "vite-tsconfig-paths": "^5.0.1",
+    "web-bip39": "^0.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
