--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
-    "@tabler/icons-react": "^3.19.0",
+    "@tabler/icons-react": "3.18.0",
     "@types/chrome": "^0.0.277",
     "@types/events": "^3.0.3",
     "@types/node": "^22.7.5",
@@ -26,8 +26,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "three": "^0.169.0",
-    "vite-tsconfig-paths": "^5.0.1",
-    "web-bip39": "^0.0.3"
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
