--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "watch": "npx gulp"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@metamask/browser-passworder": "^5.0.1",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
+    "@rollup/plugin-inject": "^5.0.5",
+    "@scure/bip39": "^1.4.0",
     "@tabler/icons-react": "3.18.0",
     "@types/chrome": "^0.0.277",
     "@types/events": "^3.0.3",
     "@types/node": "^22.7.5",
     "@types/three": "^0.169.0",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "events": "^3.3.0",
     "react": "^18.3.1",
@@ -26,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "three": "^0.169.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
@@ -39,7 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "gulp": "^5.0.0",
-    "gulp-watch": "^5.0.1",
+    "gulp-watch": "^4.3.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
