--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
+    "@reduxjs/toolkit": "^2.3.0",
     "@rollup/plugin-inject": "^5.0.5",
     "@scure/bip39": "^1.4.0",
     "@tabler/icons-react": "3.18.0",
@@ -29,6 +30,7 @@
     "react": "^18.3.1",
     "react-aria-components": "^1.4.0",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "three": "^0.169.0",
     "vite-plugin-node-polyfills": "^0.22.0",
