--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,9 @@
     /* Alias Configuration */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": ["src"]
