--- a/package.json
+++ b/package.json
@@ -11,36 +11,53 @@
     "watch": "npx gulp"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.1.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@metamask/browser-passworder": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
     "@reduxjs/toolkit": "^2.3.0",
     "@rollup/plugin-inject": "^5.0.5",
+    "@scure/bip32": "^1.6.0",
     "@scure/bip39": "^1.4.0",
+    "@scure/btc-signer": "^1.5.0",
+    "@spectrum-icons/workflow": "^4.2.16",
     "@tabler/icons-react": "3.18.0",
     "@types/chrome": "^0.0.277",
     "@types/events": "^3.0.3",
-    "@types/node": "^22.7.5",
     "@types/three": "^0.169.0",
+    "bitcoinjs-lib": "^6.1.7",
     "buffer": "^6.0.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ecpair": "^3.0.0-rc.0",
     "events": "^3.3.0",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-aria-components": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.169.0",
+    "tiny-secp256k1": "^2.2.3",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
     "child_process": "^1.0.2",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -48,6 +65,8 @@
     "globals": "^15.9.0",
     "gulp": "^5.0.0",
     "gulp-watch": "^4.3.11",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
